--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1239,7 +1239,7 @@ section {
   opacity: 1;
 }
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #106eea;
+  background-color: #10d50d;
 }
 @media (min-width: 992px) {
   .testimonials .testimonial-item p {
@@ -1271,7 +1271,7 @@ section {
   transition: all 0.3s ease-in-out;
 }
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  color: #106eea;
+  color: #0bc13e;
 }
 .portfolio #portfolio-flters li:last-child {
   margin-right: 0;
@@ -1775,14 +1775,14 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #106eea;
+  background: #069627;
   color: #fff;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 #footer .footer-newsletter form input[type=submit]:hover {
-  background: #0d58ba;
+  background: #0aab2a;
 }
 #footer .footer-top {
   padding: 60px 0 30px 0;
@@ -1799,7 +1799,7 @@ section {
   font-weight: 700;
 }
 #footer .footer-top .footer-contact h3 span {
-  color: #106eea;
+  color: #11c244;
 }
 #footer .footer-top .footer-contact p {
   font-size: 14px;
@@ -1825,7 +1825,7 @@ section {
 }
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #106eea;
+  color: #10c716;
   font-size: 18px;
   line-height: 1;
 }
@@ -1845,12 +1845,12 @@ section {
 }
 #footer .footer-top .footer-links ul a:hover {
   text-decoration: none;
-  color: #106eea;
+  color: #0fcb3b;
 }
 #footer .footer-top .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #106eea;
+  background: #09c425;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1862,7 +1862,7 @@ section {
   transition: 0.3s;
 }
 #footer .footer-top .social-links a:hover {
-  background: #3b8af2;
+  background: #07a92d;
   color: #fff;
   text-decoration: none;
 }
